tests/valid/math.f
PROGRAM MATH
INTEGER A, B, C
A = 10
B = 20
C = A + B * 2
PRINT *, 'Result: ', C
END
