tests/invalid_semantic/undeclared.f
PROGRAM UNDEC
INTEGER A
A = 10
B = A + 5
END
